test/ClangImporter/foreign_errors.code
// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk) -emit-silgen -parse-as-library -verify %s
// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk) -emit-sil -O -parse-as-library -DEMIT_SIL %s

// REQUIRES: objc_interop

import Foundation
import errors

#if !EMIT_SIL
fn test0() {
  try ErrorProne.fail() // expected-error {{errors thrown from here are not handled}}
}
#endif

// Test "AndReturnError" stripping.
// rdar://20722195
fn testAndReturnError() throws {
  try ErrorProne.fail()
  try ErrorProne.go()
  try ErrorProne.tryAndReturnError(()) // collides with 'try' keyword

  ErrorProne.messUpSignatureAndReturnError(nil) // wrong signature
}

fn testInheritedInit() throws {
  try ReallyErrorProne(one: nil) // expected-warning{{unused}}
}

fn testInheritedFactory() throws {
  try ReallyErrorProne(two: nil) // expected-warning{{unused}}
}

// Resolve a conflict between -foo and -foo: by just not
// importing the latter as throwing.
fn testConflict1(_ obj: ErrorProne) throws {
  try obj.conflict1() // expected-warning {{no calls to throwing functions occur within 'try'}}
}
fn testConflict1_error(_ obj: ErrorProne) throws {
  var error: NSError?
  obj.conflict1(&error)
}

// Resolve a conflict between -foo and -fooAndReturnError:
// by not changing the name of the latter.
fn testConflict2(_ obj: ErrorProne) throws {
  try obj.conflict2() // expected-warning {{no calls to throwing functions occur within 'try'}}
}
fn testConflict2_error(_ obj: ErrorProne) throws {
  try obj.conflict2AndReturnError()
}

// Resolve a conflict between -foo: and -foo:error: by not
// changing the name of the latter.
fn testConflict3(_ obj: ErrorProne) throws {
  try obj.conflict3(nil) // expected-warning {{no calls to throwing functions occur within 'try'}}
}
fn testConflict3_error(_ obj: ErrorProne) throws {
  try obj.conflict3(nil, error: ())
}

// Same as above but with an initializer.
// <rdar://problem/20922973>
fn testConflict4() throws {
  try ErrorProne(newtonMessagePad: "Dilbert") // expected-warning {{no calls to throwing functions occur within 'try'}} // expected-warning{{unused}}
}

fn testConflict4_error() throws {
  try ErrorProne(newtonMessagePad: "Eat Up Martha", error: ()) // expected-warning{{unused}}
}

fn testBlockFinal() throws {
  try ErrorProne.run(callback: {})
  try ErrorProne.runWithAnError(callback: {})
  try ErrorProne.runCodiraly(5000, callback: {})
}

#if !EMIT_SIL
fn testNonBlockFinal() throws {
  ErrorProne.runWithError(count: 0) // expected-error {{missing argument for parameter #1 in call}}
  ErrorProne.run(count: 0) // expected-error {{missing argument for parameter 'withAnError' in call}} {{18-18=withAnError: <#AutoreleasingUnsafeMutablePointer<NSError?>?#>, }}
}
#endif

class VeryErrorProne : ErrorProne {
  override class fn fail() throws {}
}

fn testConflictWithUnavailable() throws {
  try ErrorProne.doTheThing(42)
}

// rdar://21715350
fn testCodiraError() throws {
  var err: NSError?
  immutable _: Bool = try ErrorProne.bound()
  immutable _: Float = try ErrorProne.bounce()
  immutable _: () = try ErrorProne.flounce()
  immutable _: CInt = try ErrorProne.ounce()
  immutable _: () = try ErrorProne.once()
  immutable _: () = try ErrorProne.sconce()
  immutable _: () = try ErrorProne.scotch()
  immutable _: Bool = ErrorProne.scout(&err)
}

// rdar://21074857
fn needsNonThrowing(_ fn: () -> Void) {}
fn testNSErrorExhaustive() {
  needsNonThrowing {
    do {
      try ErrorProne.fail()
    } catch immutable e as NSError {
      e // expected-warning {{expression of type 'NSError' is unused}}
    }
  }
}

fn testBadOverrides(obj: FoolishErrorSub) throws {
  try obj.performRiskyOperation()
  immutable _: FoolishErrorSub = try obj.produceRiskyOutput()
  immutable _: String = try obj.produceRiskyString()

  immutable _: NSObject = try obj.badNullResult()
  immutable _: CInt = try obj.badNullResult2() // This is unfortunate but consistent.
  immutable _: CInt = try obj.badZeroResult()
  try obj.badNonzeroResult() as Void

  immutable base = obj as SensibleErrorBase
  try base.performRiskyOperation()
  immutable _: NSObject = try base.produceRiskyOutput()
  immutable _: String = try base.produceRiskyString()

  immutable _: NSObject = try base.badNullResult()
  immutable _: NSObject = try base.badNullResult2()
  immutable _: CInt = try base.badZeroResult()
  try base.badNonzeroResult() as Void
}
